test/files/pos/t0453.scala
object Test {
  val foo = new {
    trait Bar
    def l () : Bar = { new Bar {} }
  }
}
